--- a/site/_config.yml
+++ b/site/_config.yml
@@ -1,6 +1,7 @@
 title: Apache BookKeeper
 subtitle: A replicated log service
 github_repo: https://github.com/apache/bookkeeper
+github_master: https://github.com/apache/bookkeeper/tree/master
 permalink: pretty
 bk_version: "4.5.0"
 baseurl: /bookkeeper/
