--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <netty.version>4.1.10.Final</netty.version>
     <protobuf.version>2.6.1</protobuf.version>
     <slf4j.version>1.7.25</slf4j.version>
-    <zookeeper.version>3.5.1-alpha</zookeeper.version>
+    <zookeeper.version>3.5.3-beta</zookeeper.version>
   </properties>
   <url>http://bookkeeper.apache.org</url>
   <build>
