--- a/site/_config.yml
+++ b/site/_config.yml
@@ -6,6 +6,7 @@ permalink: pretty
 bk_version: "4.5.0"
 baseurl: /bookkeeper/
 destination: ../docs
+twitter_url: https://twitter.com/asfbookkeeper
 
 livereload: true
 
