BOOKKEEPER-1017 Create documentation for ZooKeeper ACLs - fix example and clean up doc

--- a/bookkeeper-server/conf/bk_server.conf
+++ b/bookkeeper-server/conf/bk_server.conf
@@ -201,6 +201,12 @@ zkServers=localhost:2181
 # JVM garbage collection, disk I/O will cause SESSION_EXPIRED.
 # Increment this value could help avoiding this issue
 zkTimeout=10000
+# Set ACLs on every node written on ZooKeeper, this way only allowed users
+# will be able to read and write BookKeeper metadata stored on ZooKeeper.
+# In order to make ACLs work you need to setup ZooKeeper JAAS authentication
+# all the Bookies and Client need to share the same user, and this is usually
+# done using Kerberos authentication. See ZooKeeper documentation
+zkEnableSecurity=false
 
 ## NIO Server settings
 
