Issue-196 Create Jenkins configuration using OpenStack Jenkins Job Builder Repo address reviewed

--- a/jenkins/bookkeeper-master-job-configuration.yaml
+++ b/jenkins/bookkeeper-master-job-configuration.yaml
@@ -20,7 +20,7 @@
     name: repo
     scm:
     - git:
-        url: https://git-wip-us.apache.org/repos/asf/bookkeeper.git
+        url: https://github.com/apache/bookkeeper.git
         branches:
         - "*/master"
 - job:
