Move Http Server to a separate module [bookkeeper-http],
[http-server] is a child module which provide generic http server, http handlers and http service APIs.

[vertx-http-server] and [twitter-http-server] are two implementations of http server.

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     <module>bookkeeper-server</module>
     <module>bookkeeper-benchmark</module>
     <module>bookkeeper-stats-providers</module>
+    <module>bookkeeper-http</module>
   </modules>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
