add community pages and update bulma to 0.4.4

--- a/site/_config.local.yml
+++ b/site/_config.local.yml
@@ -14,6 +14,10 @@ defaults:
   values:
     layout: docs
     toc: true
+- scope:
+    path: community
+  values:
+    layout: community
 
 gems:
 - jekyll-toc
