--- a/site/_config.yml
+++ b/site/_config.yml
@@ -20,6 +20,10 @@ defaults:
   values:
     layout: docs
     toc: true
+- scope:
+    path: community
+  values:
+    layout: community
 
 gems:
 - jekyll-toc
