add project info docs

--- a/site/_config.yml
+++ b/site/_config.yml
@@ -24,6 +24,10 @@ defaults:
     path: community
   values:
     layout: community
+- scope:
+    path: project
+  values:
+    layout: community
 
 gems:
 - jekyll-toc
