--- a/bookkeeper-http/twitter-http-server/pom.xml
+++ b/bookkeeper-http/twitter-http-server/pom.xml
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>org.apache.bookkeeper.http</groupId>
             <artifactId>http-server</artifactId>
-            <version>4.5.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 
