Exclude the site from apache-rat check

--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,7 @@
             <exclude>**/.gitignore</exclude>
             <exclude>**/.project</exclude>
             <exclude>**/.settings/*</exclude>
+            <exclude>site/**</exclude>
           </excludes>
         </configuration>
       </plugin>
