--- a/site/_config.yml
+++ b/site/_config.yml
@@ -4,7 +4,7 @@ github_repo: https://github.com/apache/bookkeeper
 github_master: https://github.com/apache/bookkeeper/tree/master
 permalink: pretty
 bk_version: "4.5.0"
-baseurl: /bookkeeper/
+baseurl: /
 destination: ../docs
 twitter_url: https://twitter.com/asfbookkeeper
 
