--- a/site/_config.yml
+++ b/site/_config.yml
@@ -5,7 +5,7 @@ github_master: https://github.com/apache/bookkeeper/tree/master
 permalink: pretty
 bk_version: "4.5.0"
 baseurl: /
-destination: generated_site/content
+destination: local-generated
 twitter_url: https://twitter.com/asfbookkeeper
 
 livereload: true
