--- a/site/_config.yml
+++ b/site/_config.yml
@@ -4,8 +4,8 @@ github_repo: https://github.com/apache/bookkeeper
 github_master: https://github.com/apache/bookkeeper/tree/master
 permalink: pretty
 bk_version: "4.5.0"
-baseurl: /bookkeeper/
-destination: ../docs
+baseurl: /
+destination: local-generated
 twitter_url: https://twitter.com/asfbookkeeper
 
 livereload: true
@@ -39,6 +39,7 @@ exclude:
 - Makefile
 - vendor/bundle
 - local-generated
+- generated_site
 - scripts
 - overview
 - README.md
