--- a/site/_config.yml
+++ b/site/_config.yml
@@ -13,6 +13,8 @@ livereload: true
 versions:
 - "4.5.0"
 latest: "4.5.0"
+latest_release: "4.4.0"
+stable_release: "4.4.0"
 distributedlog_version: "2.1.0-0.4.0"
 
 defaults:
