--- a/site/_config.yml
+++ b/site/_config.yml
@@ -7,12 +7,27 @@ bk_version: "4.5.0"
 baseurl: /
 destination: local-generated
 twitter_url: https://twitter.com/asfbookkeeper
+archived_releases_url: //bookkeeper.apache.org/docs/r
 
 livereload: true
 
 versions:
 - "4.5.0"
+archived_versions:
+- "4.4.0"
+- "4.3.2"
+- "4.3.1"
+- "4.3.0"
+- "4.2.4"
+- "4.2.3"
+- "4.2.2"
+- "4.2.1"
+- "4.2.0"
+- "4.1.0"
+- "4.0.0"
 latest: "4.5.0"
+latest_release: "4.4.0"
+stable_release: "4.4.0"
 distributedlog_version: "2.1.0-0.4.0"
 
 defaults:
@@ -27,6 +42,10 @@ defaults:
     layout: community
 - scope:
     path: project
+  values:
+    layout: community
+- scope:
+    path: releases
   values:
     layout: community
 
