BOOKKEEPER-588: SSL Support for Bookkeeper
+ Merged changes from eoliville
+ Mutual Authentication

Author: kishorekasi <kkasiud1@gmail.com>
Author: Kishore Kasi Udayashankar <kudayashankar@salesforce.com>
Author: Kishore Udayashankar <kudayashankar@salesforce.com>

Reviewers: Sijie Guo <sijie@apache.org>

This patch had conflicts when merged, resolved by
Committer: Sijie Guo <sijie@apache.org>

This closes #183 from kishorekasi/BOOKKEEPER-588-kishore

--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -221,6 +221,11 @@
         <version>2.7.3</version>
         <scope>test</scope>
     </dependency>          
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-tcnative-boringssl-static</artifactId>
+      <version>${netty-boringssl.version}</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
@@ -334,6 +339,12 @@
             <exclude>**/.gitignore</exclude>
             <exclude>**/.project</exclude>
             <exclude>**/.settings/*</exclude>
+            <exclude>certs/keyStoreClientPassword.txt</exclude>
+            <exclude>certs/keyStoreServerPassword.txt</exclude>
+            <exclude>certs/trustStorePassword.txt</exclude>
+            <exclude>src/test/resources/keyStoreClientPassword.txt</exclude>
+            <exclude>src/test/resources/keyStoreServerPassword.txt</exclude>
+            <exclude>src/test/resources/trustStorePassword.txt</exclude>
           </excludes>
         </configuration>
       </plugin>
