Fix rat issue on jenkins ci

--- a/pom.xml
+++ b/pom.xml
@@ -238,6 +238,7 @@
             <exclude>**/.project</exclude>
             <exclude>**/.settings/*</exclude>
             <exclude>site/**</exclude>
+            <exclude>**/cacerts</exclude>
           </excludes>
         </configuration>
       </plugin>
