--- a/bookkeeper-server/pom.xml
+++ b/bookkeeper-server/pom.xml
@@ -342,6 +342,7 @@
             <exclude>certs/keyStoreClientPassword.txt</exclude>
             <exclude>certs/keyStoreServerPassword.txt</exclude>
             <exclude>certs/trustStorePassword.txt</exclude>
+            <exclude>src/test/resources/cacerts</exclude>
             <exclude>src/test/resources/keyStoreClientPassword.txt</exclude>
             <exclude>src/test/resources/keyStoreServerPassword.txt</exclude>
             <exclude>src/test/resources/trustStorePassword.txt</exclude>
