--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -24,30 +24,35 @@ ARG BK_VERSION=4.4.0
 ARG DISTRO_NAME=bookkeeper-server-${BK_VERSION}-bin
 ARG ZK_VERSION=3.5.2-alpha
 
+ENV BOOKIE_PORT=3181
+EXPOSE $BOOKIE_PORT
+ENV BK_USER=bookkeeper
+
 # Download Apache Bookkeeper and zookeeper, untar and clean up
 RUN set -x \
+    && adduser "${BK_USER}" \
     && yum install -y java-1.8.0-openjdk-headless wget bash python md5sum \
     && mkdir -pv /opt \
     && cd /opt \
     && wget -q "https://archive.apache.org/dist/bookkeeper/bookkeeper-${BK_VERSION}/${DISTRO_NAME}.tar.gz" \
+    && wget -q "https://archive.apache.org/dist/bookkeeper/bookkeeper-${BK_VERSION}/${DISTRO_NAME}.tar.gz.md5" \
+    && md5sum -c ${DISTRO_NAME}.tar.gz.md5 \
     && tar -xzf "$DISTRO_NAME.tar.gz" \
     && mv bookkeeper-server-${BK_VERSION}/ /opt/bookkeeper/ \
     && wget -q http://www.apache.org/dist/zookeeper/zookeeper-${ZK_VERSION}/zookeeper-${ZK_VERSION}.tar.gz \
+    && wget -q http://www.apache.org/dist/zookeeper/zookeeper-${ZK_VERSION}/zookeeper-${ZK_VERSION}.tar.gz.md5 \
+    && md5sum -c zookeeper-${ZK_VERSION}.tar.gz.md5 \
     && tar -xzf  zookeeper-${ZK_VERSION}.tar.gz \
     && mv zookeeper-${ZK_VERSION}/ /opt/zk/ \
     && rm -rf "$DISTRO_NAME.tar.gz" "zookeeper-${ZK_VERSION}.tar.gz" \
     && yum remove -y wget \
     && yum clean all
 
-ENV BOOKIE_PORT 3181
-
-EXPOSE $BOOKIE_PORT
-
 WORKDIR /opt/bookkeeper
 
 COPY scripts/apply-config-from-env.py scripts/entrypoint.sh scripts/healthcheck.sh /opt/bookkeeper/
 
 ENTRYPOINT [ "/bin/bash", "/opt/bookkeeper/entrypoint.sh" ]
-CMD ["bookkeeper", "bookie"]
+CMD ["/opt/bookkeeper/bin/bookkeeper", "bookie"]
 
 HEALTHCHECK --interval=10s --timeout=60s CMD /bin/bash /opt/bookkeeper/healthcheck.sh
